--- a/index.ipynb
+++ b/index.ipynb
@@ -2110,22 +2110,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "66.73"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import math\n",
     "def error(x_values, y_values, m, b, x):\n",
@@ -2145,7 +2134,7 @@
     "    return round(math.sqrt(sum(squared_errors(x_values, y_values, m, b))/len(x_values)), 2)\n",
     "\n",
     "print(squared_errors(budgets, revenues, 1.417, 133.33)) #[0.0, 13625.89, 3896.26, 4741.01, 0.02]\n",
-    "residual_sum_squares(budgets, revenues, 1.417, 133.33)) # 22263.18\n",
+    "print(residual_sum_squares(budgets, revenues, 1.417, 133.33)) # 22263.18\n",
     "root_mean_squared_error(budgets, revenues, 1.417, 133.33) # 66.73"
    ]
   },
